After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680714 - totem-mozilla plugin fails to display AVC & MPEG4 in .mov & .mp4 containers
totem-mozilla plugin fails to display AVC & MPEG4 in .mov & .mp4 containers
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Browser plugin (obsolete)
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: totem-browser-maint
totem-browser-maint
Depends on:
Blocks:
 
 
Reported: 2012-07-27 18:34 UTC by Doug McMahon
Modified: 2012-10-10 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test video clip (714.58 KB, video/mp4)
2012-07-27 18:35 UTC, Doug McMahon
Details

Description Doug McMahon 2012-07-27 18:34:18 UTC
This applies to online videos & locally stored .mov, .mp4  files dropped into a browser window like firefox.
Only audio, no video
Totem itself will play these files as will the plugin in 3.0.1 & earlier

Reported here - 
https://bugs.launchpad.net/ubuntu/+source/totem/+bug/1028755

Online test for .mov, direct link
http://anon.nasa-global.edgesuite.net/HD_downloads/Arthur_Christmas.mov

Attaching small clip that should be playable in browser window
Comment 1 Doug McMahon 2012-07-27 18:35:36 UTC
Created attachment 219750 [details]
test video clip
Comment 2 Doug McMahon 2012-09-20 04:11:27 UTC
With the recent fix of this bug the 3.5.x version now work But still fails on 
AVC & MPEG4 in .mov & .mp4 containers 
https://bugzilla.gnome.org/show_bug.cgi?id=683429
Comment 3 Bastien Nocera 2012-10-10 16:03:16 UTC
commit 4a10b7662895d1ed72db62a438372862d4c65a98
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Oct 10 18:01:15 2012 +0200

    browser-plugin: Fix MOV streams with hidden video
    
    We would treat MOV streams with no set height as "audio-only" because
    the undefined height (-1) is smaller than the smallest our controls bar
    can be. This code has apparently been broken since 2008, and nobody
    noticed?
    
    https://bugzilla.gnome.org/show_bug.cgi?id=680714