browser-plugin: Fix MOV streams with hidden video

We would treat MOV streams with no set height as "audio-only" because
the undefined height (-1) is smaller than the smallest our controls bar
can be. This code has apparently been broken since 2008, and nobody
noticed?

https://bugzilla.gnome.org/show_bug.cgi?id=680714